--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Bienvenidos!</title>
 </head>
 <body>
+<div class="container">
+    <h3>Bienvenidos al applicativo Deltron</h3>
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+
+                <h5 class="card-title">
+                    Clients
+                </h5>
+
+                <p class="card-text">
+                    Desde aqui podremos realizar el mantenimiento de supplier
+                </p>
+
+                <a th:href="@{/clients}" class="btn btn-primary">
+                    Supplier
+                </a>
+
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+
+                <h5 class="card-title">
+                    Product
+                </h5>
+
+                <p class="card-text">
+                    Desde aqui podremos realizar el mantenimiento de product
+                </p>
+
+                <a th:href="@{/products}" class="btn btn-primary">
+                    Product
+                </a>
+
+            </div>
+        </div>
+
+    </div>
+</div>
 
 </body>
 </html>
